src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>請求</label>
        <referenceTo>seikyuu__c</referenceTo>
        <relationshipLabel>品目２</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>品目２</relationshipLabel>
        <relationshipName>Merchandise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>品目２</label>
    <nameField>
        <label>品目番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>